Bug 857831 - Remove WBMP content sniffer. r=jmuizelaar